--- a/myJournalProject/pom.xml
+++ b/myJournalProject/pom.xml
@@ -54,6 +54,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		<version>3.1.2</version>  <!-- Use the latest stable version -->
+</dependency>
+
 	</dependencies>
 
 	<build>
