--- a/myJournalProject/pom.xml
+++ b/myJournalProject/pom.xml
@@ -59,6 +59,10 @@
 		<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		<version>3.1.2</version>  <!-- Use the latest stable version -->
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
 
 	</dependencies>
 
