--- a/myJournalProject/src/main/resources/application.yml
+++ b/myJournalProject/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
     # active: prod
   application:
     name: myJournalProject
-
+  redis:
+    host: localhost
+    port: 6379
 
   data:
     mongodb:
